# watchlist

./: .flaskenv  pyproject.toml  requirements.txt
watchlist/: __init__.py  forms.py  models.py  routes.py
watchlist/static/: forms.css  movies.css  styles.css
watchlist/templates/: base.html  edit_movie.html  index.html  login.html  new_movie.html  register.html  view_movie.html
watchlist/templates/macros/: fields.html  footer.html  nav.html
