[tool.poetry]
name = "moviewatchlist"
version = "0.1.0"
description = ""
authors = ["Ritika Chadha <ritikachadha05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bson = "^0.5.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
